[gd_scene load_steps=13 format=3 uid="uid://c6yfkkpditq3y"]

[ext_resource type="Script" path="res://Minigames/Ant/Game1/ant_collecting.gd" id="1_nsxem"]
[ext_resource type="Script" path="res://Minigames/Ant/Game1/AntSpawner.gd" id="1_tda4l"]
[ext_resource type="PackedScene" uid="uid://sj53c0kb48lu" path="res://Minigames/Ant/Game1/ecaped_ant.tscn" id="2_knyrp"]
[ext_resource type="Script" path="res://Minigames/Ant/Game1/AntCounter.gd" id="3_vtlxo"]
[ext_resource type="Script" path="res://Minigames/Ant/Game1/LoseTimerLabel.gd" id="4_u8ykp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_250j1"]
size = Vector2(957, 1788.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnfcm"]
size = Vector2(4122, 554)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rp5q"]
size = Vector2(681, 1698)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o8t5c"]
size = Vector2(3726, 376)

[sub_resource type="CircleShape2D" id="CircleShape2D_i0g7l"]
radius = 27.0185

[sub_resource type="LabelSettings" id="LabelSettings_tiawh"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_7qv11"]
font_size = 30

[node name="AntCollecting" type="Node2D"]
script = ExtResource("1_nsxem")

[node name="AntSpawner" type="Node2D" parent="."]
script = ExtResource("1_tda4l")
escaped_ant_tscn = ExtResource("2_knyrp")

[node name="Area2D" type="Area2D" parent="."]

[node name="Boundary1" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-543.5, 807.75)
shape = SubResource("RectangleShape2D_250j1")

[node name="Boundary2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(748, 971)
shape = SubResource("RectangleShape2D_mnfcm")

[node name="Boundary3" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1572.5, 762)
shape = SubResource("RectangleShape2D_1rp5q")

[node name="Boundary4" type="CollisionShape2D" parent="Area2D"]
position = Vector2(604, -249)
shape = SubResource("RectangleShape2D_o8t5c")

[node name="Mouse" type="Area2D" parent="."]
position = Vector2(-1435, 221)
metadata/_edit_group_ = true

[node name="MouseCollision" type="CollisionShape2D" parent="Mouse"]
shape = SubResource("CircleShape2D_i0g7l")

[node name="AntCounter" type="Label" parent="."]
offset_left = 507.0
offset_top = 126.0
offset_right = 734.0
offset_bottom = 204.0
label_settings = SubResource("LabelSettings_tiawh")
script = ExtResource("3_vtlxo")

[node name="LoseTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="LoseTimerLabel" type="Label" parent="LoseTimer"]
offset_left = 561.0
offset_top = 21.0
offset_right = 639.0
offset_bottom = 128.0
label_settings = SubResource("LabelSettings_7qv11")
script = ExtResource("4_u8ykp")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Mouse" to="." method="_on_mouse_area_entered"]
[connection signal="timeout" from="LoseTimer" to="." method="_on_lose_timer_timeout"]
